--- a/public/js/app/sales/views/index.html
+++ b/public/js/app/sales/views/index.html
@@ -93,6 +93,7 @@
                       <th>Vendedor</th>
                       <th>Estado Pago</th>
                       <th>Estado Venta</th>
+                        <th>Notas</th>
                       <th style="width: 40px">Detalle</th>
                     </tr>
                     
@@ -107,7 +108,8 @@
                       <td ng-if="row.estado==1"><span style="color: green;">Terminado</span></td>
                       <td ng-if="row.estado==0"><span style="color: yellow;">Pendiente</span></td>
                       <td ng-if="row.estado==3"><span style="color: red;">Anulado</span></td>
-                      <td>{{row.estadoPago==1? 'Credito':'Contado'}}</td> 
+                      <td>{{row.estadoPago==1? 'Credito':'Contado'}}</td>
+                        <td><i>{{row.notas}}</i></td>
                       <td><a ng-click="editorder(row)" class="btn btn-warning btn-xs">Ver</a></td>
                       
                       
