--- a/public/report/ReportDetCash20.jrxml
+++ b/public/report/ReportDetCash20.jrxml
@@ -8,7 +8,7 @@
 	</parameter>
 	<parameter name="cash_id" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[select cashes.id,cashes.fechaInicio,cashMotives.nombre,SUM(montoMovimientoTarjeta) as totMovTar,SUM(montoMovimientoEfectivo)as totMovEfec ,cashMotives.observacion from detCash inner join cashMotives on cashMotives.id=detCash.cashMotive_id inner join cashes on cashes.id=detCash.cash_id where cashMotives.tipo="+" and cashes.id=$P{cash_id} group by cashMotives.id order by cashMotives.tipo;]]>
+		<![CDATA[select cashes.id,cashes.fechaInicio,cashMotives.nombre,montoMovimientoTarjeta as totMovTar,montoMovimientoEfectivo as totMovEfec ,cashMotives.observacion from detCash inner join cashMotives on cashMotives.id=detCash.cashMotive_id inner join cashes on cashes.id=detCash.cash_id where cashMotives.tipo="+" and cashes.id=$P{cash_id}  order by cashMotives.tipo;]]>
 	</queryString>
 	<field name="id" class="java.lang.Long">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -31,9 +31,15 @@
 		<band/>
 	</title>
 	<pageHeader>
-		<band height="59">
+		<band/>
+	</pageHeader>
+	<columnHeader>
+		<band/>
+	</columnHeader>
+	<detail>
+		<band height="32">
 			<subreport>
-				<reportElement x="-20" y="0" width="595" height="48" uuid="f6a2c6b4-5df2-4536-a19b-5a082709307a"/>
+				<reportElement x="-20" y="0" width="595" height="24" uuid="f6a2c6b4-5df2-4536-a19b-5a082709307a"/>
 				<subreportParameter name="cash_id">
 					<subreportParameterExpression><![CDATA[$P{cash_id}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -44,42 +50,9 @@
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ReportDetCash2.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
-	</pageHeader>
-	<columnHeader>
-		<band height="100">
-			<line>
-				<reportElement x="-20" y="98" width="595" height="1" forecolor="#666666" uuid="4e79133a-ff12-4a30-8c65-8efea112cb44"/>
-			</line>
-			<staticText>
-				<reportElement mode="Opaque" x="0" y="78" width="75" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="99f32034-2706-42ef-9f59-e633773c74ef"/>
-				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Fecha]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="222" y="78" width="90" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="f9414b6c-76a9-41b7-bd05-de4158217ac3"/>
-				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Mov.Tarjeta]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="75" y="78" width="147" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="5efa1fab-c272-42a6-9ad3-e5fe13d7ef1b"/>
-				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Tipo de Movimiento]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="312" y="78" width="107" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="bd46ddef-5e96-48fb-aa41-34f8fcae121f"/>
-				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Mov. Efectivo]]></text>
-			</staticText>
+		<band height="85">
 			<subreport>
-				<reportElement x="2" y="41" width="553" height="31" uuid="b572a37d-919f-4a09-9a1d-57ff3fc5f4ab"/>
+				<reportElement x="-1" y="45" width="556" height="31" uuid="b572a37d-919f-4a09-9a1d-57ff3fc5f4ab"/>
 				<subreportParameter name="cash_id">
 					<subreportParameterExpression><![CDATA[$P{cash_id}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -87,46 +60,22 @@
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "DetCashTotales.jasper"]]></subreportExpression>
 			</subreport>
 			<staticText>
-				<reportElement mode="Opaque" x="2" y="0" width="555" height="31" forecolor="#006699" backcolor="#E6E6E6" uuid="98e55baf-e977-4e23-9a68-a16bd2a30249"/>
+				<reportElement mode="Opaque" x="0" y="3" width="555" height="31" forecolor="#006699" backcolor="#E6E6E6" uuid="98e55baf-e977-4e23-9a68-a16bd2a30249"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Detalles Ingresos Cajas]]></text>
 			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="419" y="78" width="134" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="902df8a1-8e4e-4f5a-b3f4-076874cd008e"/>
-				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Mov. Efectivo]]></text>
-			</staticText>
 		</band>
-	</columnHeader>
-	<detail>
-		<band height="25">
-			<textField>
-				<reportElement x="233" y="1" width="79" height="20" uuid="663014bb-3620-49d1-964d-7355d4d5a2a6"/>
-				<textFieldExpression><![CDATA["S/."+$F{totMovTar}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="322" y="1" width="97" height="20" uuid="e1aa1a1f-0d64-401a-80d0-5f3a080c9b55"/>
-				<textFieldExpression><![CDATA["S/."+$F{totMovEfec}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="75" y="1" width="158" height="20" uuid="85ecdc8e-6163-413b-92a9-293e63eb4727"/>
-				<textFieldExpression><![CDATA[$F{nombre}]]></textFieldExpression>
-			</textField>
-			<textField pattern="dd/MM/yyyy">
-				<reportElement x="2" y="1" width="73" height="20" uuid="b6140114-6c36-4dab-a5ea-3114a5cbd693"/>
-				<textFieldExpression><![CDATA[$F{fechaInicio}]]></textFieldExpression>
-			</textField>
-			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="21" width="555" height="1" uuid="f58ef0f5-28dd-46e8-9733-c5dd45fa7f98"/>
-			</line>
-			<textField>
-				<reportElement x="419" y="2" width="134" height="20" uuid="6cb206df-a458-420e-8c94-17b24f5f21f7"/>
-				<textFieldExpression><![CDATA[$F{observacion}]]></textFieldExpression>
-			</textField>
+		<band height="40">
+			<subreport>
+				<reportElement x="0" y="0" width="555" height="30" uuid="5d32b660-c2d7-482a-b908-2862d4a7743b"/>
+				<subreportParameter name="cash_id">
+					<subreportParameterExpression><![CDATA[$P{cash_id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ReportDetCashmas.jasper"]]></subreportExpression>
+			</subreport>
 		</band>
 	</detail>
 	<columnFooter>
