--- a/public/report/DetCashTotales.jrxml
+++ b/public/report/DetCashTotales.jrxml
@@ -6,6 +6,9 @@
 	<parameter name="cash_id" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String">
+		<defaultValueExpression><![CDATA["/usr/share/nginx/html/salesfly/public/report/"]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[select SUM(montoMovimientoTarjeta) as totMovTar,SUM(montoMovimientoEfectivo)as totMovEfec from detCash inner join cashMotives on cashMotives.id=detCash.cashMotive_id inner join cashes on cashes.id=detCash.cash_id where cashMotives.tipo="+" and cashes.id=$P{cash_id};]]>
 	</queryString>
@@ -21,39 +24,47 @@
 		<band/>
 	</pageHeader>
 	<columnHeader>
-		<band height="21">
+		<band/>
+	</columnHeader>
+	<detail>
+		<band height="46">
+			<subreport>
+				<reportElement x="0" y="24" width="593" height="19" uuid="381759cc-c77a-44a9-b491-7deeb3e0e41a"/>
+				<subreportParameter name="cash_id">
+					<subreportParameterExpression><![CDATA[$P{cash_id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ReportDetCashmas.jasper"]]></subreportExpression>
+			</subreport>
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="143" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="6acf1c56-de9c-4cbc-9320-e5045d34bf5f"/>
+				<reportElement mode="Opaque" x="2" y="0" width="143" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="6acf1c56-de9c-4cbc-9320-e5045d34bf5f"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tot. Mov. Tarjeta:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="290" y="1" width="165" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="c97e8457-2ed7-48e2-9dfc-7a85ee1fc13e"/>
+				<reportElement mode="Opaque" x="292" y="1" width="165" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="c97e8457-2ed7-48e2-9dfc-7a85ee1fc13e"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tot. Mov. Efectivo:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="143" y="0" width="109" height="20" uuid="d41fe37d-d162-45ee-9fdb-876e702105b2"/>
+				<reportElement x="145" y="0" width="109" height="20" uuid="d41fe37d-d162-45ee-9fdb-876e702105b2"/>
 				<textElement>
 					<font size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{totMovTar}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="455" y="0" width="138" height="20" uuid="8e01d0b0-0340-4d24-86d3-1708e8e9e70a"/>
+				<reportElement x="457" y="0" width="138" height="20" uuid="8e01d0b0-0340-4d24-86d3-1708e8e9e70a"/>
 				<textElement>
 					<font size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{totMovEfec}]]></textFieldExpression>
 			</textField>
 		</band>
-	</columnHeader>
-	<detail>
-		<band/>
 	</detail>
 	<columnFooter>
 		<band/>
