--- a/public/report/ReportDetCash20.jrxml
+++ b/public/report/ReportDetCash20.jrxml
@@ -8,7 +8,7 @@
 	</parameter>
 	<parameter name="cash_id" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[select cashes.id,cashes.fechaInicio,cashMotives.nombre,montoMovimientoTarjeta as totMovTar,montoMovimientoEfectivo as totMovEfec ,cashMotives.observacion from detCash inner join cashMotives on cashMotives.id=detCash.cashMotive_id inner join cashes on cashes.id=detCash.cash_id where cashMotives.tipo="+" and cashes.id=$P{cash_id}  order by cashMotives.tipo;]]>
+		<![CDATA[select cashes.id,cashes.fechaInicio,cashMotives.nombre,montoMovimientoTarjeta as totMovTar,montoMovimientoEfectivo as totMovEfec ,cashMotives.observacion from detCash inner join cashMotives on cashMotives.id=detCash.cashMotive_id inner join cashes on cashes.id=detCash.cash_id where cashMotives.tipo="+" and cashes.id=$P{cash_id}  order by cashMotives.tipo limit 1;]]>
 	</queryString>
 	<field name="id" class="java.lang.Long">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -37,9 +37,9 @@
 		<band/>
 	</columnHeader>
 	<detail>
-		<band height="32">
+		<band height="94">
 			<subreport>
-				<reportElement x="-20" y="0" width="595" height="24" uuid="f6a2c6b4-5df2-4536-a19b-5a082709307a"/>
+				<reportElement x="-15" y="0" width="595" height="24" uuid="f6a2c6b4-5df2-4536-a19b-5a082709307a"/>
 				<subreportParameter name="cash_id">
 					<subreportParameterExpression><![CDATA[$P{cash_id}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -49,32 +49,23 @@
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ReportDetCash2.jasper"]]></subreportExpression>
 			</subreport>
-		</band>
-		<band height="85">
-			<subreport>
-				<reportElement x="-1" y="45" width="556" height="31" uuid="b572a37d-919f-4a09-9a1d-57ff3fc5f4ab"/>
-				<subreportParameter name="cash_id">
-					<subreportParameterExpression><![CDATA[$P{cash_id}]]></subreportParameterExpression>
-				</subreportParameter>
-				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "DetCashTotales.jasper"]]></subreportExpression>
-			</subreport>
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="3" width="555" height="31" forecolor="#006699" backcolor="#E6E6E6" uuid="98e55baf-e977-4e23-9a68-a16bd2a30249"/>
+				<reportElement positionType="Float" mode="Opaque" x="0" y="30" width="555" height="31" forecolor="#006699" backcolor="#E6E6E6" uuid="98e55baf-e977-4e23-9a68-a16bd2a30249"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Detalles Ingresos Cajas]]></text>
 			</staticText>
-		</band>
-		<band height="40">
 			<subreport>
-				<reportElement x="0" y="0" width="555" height="30" uuid="5d32b660-c2d7-482a-b908-2862d4a7743b"/>
+				<reportElement positionType="Float" x="0" y="66" width="555" height="23" uuid="af5f4826-0ef3-4cfb-876d-0f31a42e3299"/>
 				<subreportParameter name="cash_id">
 					<subreportParameterExpression><![CDATA[$P{cash_id}]]></subreportParameterExpression>
 				</subreportParameter>
+				<subreportParameter name="SUBREPORT_DIR">
+					<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
+				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ReportDetCashmas.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "DetCashTotales.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
