--- a/public/report/ReportDetCashmas.jrxml
+++ b/public/report/ReportDetCashmas.jrxml
@@ -7,7 +7,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select cashes.id,cashes.fechaInicio,cashMotives.nombre,montoMovimientoTarjeta as totMovTar,montoMovimientoEfectivo as totMovEfec ,cashMotives.observacion from detCash inner join cashMotives on cashMotives.id=detCash.cashMotive_id inner join cashes on cashes.id=detCash.cash_id where cashMotives.tipo="+" and cashes.id=$P{cash_id} order by cashMotives.tipo;]]>
+		<![CDATA[select cashes.id,cashes.fechaInicio,cashMotives.nombre,montoMovimientoTarjeta as totMovTar,montoMovimientoEfectivo as totMovEfec ,cashMotives.observacion from detCash inner join cashMotives on cashMotives.id=detCash.cashMotive_id inner join cashes on cashes.id=detCash.cash_id where cashMotives.tipo="+" and cashes.id=$P{cash_id} group by detCash.id order by cashMotives.tipo;]]>
 	</queryString>
 	<field name="id" class="java.lang.Long">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -67,7 +67,7 @@
 			</staticText>
 			<staticText>
 				<reportElement mode="Opaque" x="402" y="0" width="150" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="ce3c0b82-0190-4290-9eb9-7467b6f6cafa"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Left">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[observacion]]></text>
