--- a/public/report/RporteVentasPrincipal2.jrxml
+++ b/public/report/RporteVentasPrincipal2.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="RporteVentasPrincipal" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="4aa4d006-5d0f-464d-a60b-c3e14d299968">
-	<property name="ireport.zoom" value="1.5"/>
+	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaini" class="java.lang.String">
@@ -10,21 +10,28 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String"/>
+	<parameter name="tipo" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="estado" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[select detSales.created_at as fecha,variants.id as varid,ROUND(SUM(detPres.suppPri*detSales.cantidad),2) as precioCompra,ROUND(SUM(detSales.subTotal-(detPres.suppPri*detSales.cantidad)),2)as ganacia,SUM(detSales.cantidad)as totCant,SUM(detSales.subTotal) as totaSubtotal from detSales left join detPres on detPres.id=detSales.detPre_id
+		<![CDATA[select detSeparateSales.created_at as fecha,variants.id as varid,ROUND(SUM(detPres.suppPri*detSeparateSales.cantidad),2) as precioCompra,ROUND(SUM(detSeparateSales.subTotal-(detPres.suppPri*detSeparateSales.cantidad)),2)as ganacia,SUM(detSeparateSales.cantidad) as totCant,SUM(detSeparateSales.subTotal) as totaSubtotal,SUM(salePayments.Acuenta) as totAcuenta,SUM(salePayments.Saldo) as totSaldo from detSeparateSales
+                     left join detPres on detPres.id=detSeparateSales.detPre_id
                      left join variants on variants.id=detPres.variant_id
                      left join products on products.id=variants.product_id
                      left join brands on products.brand_id=brands.id
                      left join types on products.type_id=types.id
                      left join stations on products.station_id=stations.id
-                     inner join sales on detSales.sale_id=sales.id
-                     inner join detCash on sales.detCash_id=detCash.id
-                     inner join cashes on detCash.cash_id=cashes.id
-                     inner join salePayments on salePayments.sale_id=sales.id
-                     inner join saledetPayments on saledetPayments.salePayment_id=salePayments.id
-                     inner join saleMethodPayments on saleMethodPayments.id=saledetPayments.saleMethodPayment_id
 
-                    where detSales.created_at between $P{fechaini} and $P{fechafin}]]>
+                     inner join separateSales on separateSales.id=detSeparateSales.separateSale_id
+                     left join salePayments on salePayments.separateSale_id=detSeparateSales.id
+                     left join saledetPayments on saledetPayments.salePayment_id=salePayments.id
+                     left join saleMethodPayments on saleMethodPayments.id=saledetPayments.saleMethodPayment_id
+
+                    where separateSales.estado like $P{estado} and separateSales.tipo like $P{tipo} and detSeparateSales.created_at between $P{fechaini} and $P{fechafin}
+                    ]]>
 	</queryString>
 	<field name="fecha" class="java.sql.Timestamp"/>
 	<field name="varid" class="java.lang.Long"/>
@@ -32,6 +39,8 @@
 	<field name="ganacia" class="java.math.BigDecimal"/>
 	<field name="totCant" class="java.math.BigDecimal"/>
 	<field name="totaSubtotal" class="java.math.BigDecimal"/>
+	<field name="totAcuenta" class="java.math.BigDecimal"/>
+	<field name="totSaldo" class="java.math.BigDecimal"/>
 	<background>
 		<band/>
 	</background>
@@ -46,8 +55,43 @@
 	</columnHeader>
 	<detail>
 		<band height="70">
+			<staticText>
+				<reportElement positionType="FixRelativeToBottom" x="277" y="44" width="50" height="20" uuid="40cc68e7-10e6-4025-b14f-27cf9306db88"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Totales:]]></text>
+			</staticText>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="346" y="45" width="30" height="20" uuid="0eea267b-52d2-495a-8973-57d0bfec582c"/>
+				<textElement>
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{totCant}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" mode="Transparent" x="432" y="45" width="34" height="20" forecolor="#FF0000" backcolor="#FF0000" uuid="36f00877-8f38-47aa-ac7a-8e131e8cb3c2"/>
+				<textElement>
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{precioCompra}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="466" y="45" width="37" height="20" forecolor="#00FF00" uuid="c40d85e3-8a32-40ef-874d-26a9bc8f46af"/>
+				<textElement>
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{ganacia}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement positionType="FixRelativeToBottom" x="503" y="45" width="28" height="20" forecolor="#0000FF" uuid="ae57476a-6ddb-4ddb-b848-e4d58509cdd9"/>
+				<textElement>
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{totaSubtotal}]]></textFieldExpression>
+			</textField>
 			<subreport>
-				<reportElement x="-22" y="0" width="596" height="43" uuid="1426778d-e4af-4c00-bbcc-2cb1aa180d10"/>
+				<reportElement x="-19" y="0" width="593" height="44" uuid="40fa854a-9a62-4b10-a391-7b486a170d59"/>
 				<subreportParameter name="fechaini">
 					<subreportParameterExpression><![CDATA[$P{fechaini}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -57,44 +101,15 @@
 				<subreportParameter name="SUBREPORT_DIR">
 					<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
 				</subreportParameter>
+				<subreportParameter name="tipo">
+					<subreportParameterExpression><![CDATA[$P{tipo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="estado">
+					<subreportParameterExpression><![CDATA[$P{estado}]]></subreportParameterExpression>
+				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "SubReportVentas.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "SubReportVentas2.jasper"]]></subreportExpression>
 			</subreport>
-			<staticText>
-				<reportElement positionType="FixRelativeToBottom" x="357" y="44" width="50" height="20" uuid="40cc68e7-10e6-4025-b14f-27cf9306db88"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Totales:]]></text>
-			</staticText>
-			<textField>
-				<reportElement positionType="FixRelativeToBottom" x="412" y="45" width="35" height="20" uuid="0eea267b-52d2-495a-8973-57d0bfec582c"/>
-				<textElement>
-					<font size="7"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{totCant}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement positionType="FixRelativeToBottom" mode="Transparent" x="447" y="45" width="34" height="20" forecolor="#FF0000" backcolor="#FF0000" uuid="36f00877-8f38-47aa-ac7a-8e131e8cb3c2"/>
-				<textElement>
-					<font size="7"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{precioCompra}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement positionType="FixRelativeToBottom" x="481" y="45" width="37" height="20" forecolor="#00FF00" uuid="c40d85e3-8a32-40ef-874d-26a9bc8f46af"/>
-				<textElement>
-					<font size="7"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{ganacia}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement positionType="FixRelativeToBottom" x="518" y="45" width="37" height="20" forecolor="#0000FF" uuid="ae57476a-6ddb-4ddb-b848-e4d58509cdd9"/>
-				<textElement>
-					<font size="7"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{totaSubtotal}]]></textFieldExpression>
-			</textField>
 		</band>
 	</detail>
 	<columnFooter>
