--- a/public/report/SubReportVentas2.jrxml
+++ b/public/report/SubReportVentas2.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="SubReportVentas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a79d4afb-19d5-41e9-81e3-a24b10014a80">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="SubReportVentas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="0" uuid="a79d4afb-19d5-41e9-81e3-a24b10014a80">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -19,7 +19,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select SUM(detSeparateSales.cantidad) AS totalUnidades, SUM(detPres.suppPri*detSeparateSales.cantidad) as totalPrecioCompra, SUM(detSeparateSales.subTotal)as totalVentas, SUM(detSeparateSales.subTotal-(detPres.suppPri*detSeparateSales.cantidad)) as totalGanacia  from detSeparateSales
+		<![CDATA[select SUM(detSeparateSales.cantidad) AS totalUnidades, ROUND(SUM(detPres.suppPri*detSeparateSales.cantidad),2) as totalPrecioCompra, ROUND(SUM(detSeparateSales.subTotal),2)as totalVentas, ROUND(SUM(detSeparateSales.subTotal-(detPres.suppPri*detSeparateSales.cantidad)),2) as totalGanacia  from detSeparateSales
                      left join detPres on detPres.id=detSeparateSales.detPre_id
                      left join variants on variants.id=detPres.variant_id
                      left join products on products.id=variants.product_id
@@ -59,7 +59,7 @@
 		<band/>
 	</columnHeader>
 	<detail>
-		<band height="118">
+		<band height="111">
 			<staticText>
 				<reportElement mode="Opaque" x="0" y="0" width="67" height="20" forecolor="#006699" backcolor="#D1B5B5" uuid="bf0fa06c-fac4-4d5c-a847-1efaa37142af"/>
 				<textElement textAlignment="Center">
