--- a/public/report/ReporteVentas.jrxml
+++ b/public/report/ReporteVentas.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ReporteVentas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="8ef771bc-de0e-41a0-9d1d-a47119ea8c9f">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaini" class="java.lang.String">
@@ -23,7 +23,7 @@
                      inner join saledetPayments on saledetPayments.salePayment_id=salePayments.id
                      inner join saleMethodPayments on saleMethodPayments.id=saledetPayments.saleMethodPayment_id
 
-                    and detSales.created_at between $P{fechaini} and $P{fechafin}
+                    where detSales.created_at between $P{fechaini} and $P{fechafin}
                     group by detSales.id]]>
 	</queryString>
 	<field name="fecha" class="java.sql.Timestamp"/>
